Pull over content changes from WIP branch

--- a/src/content/ideas/2025/dl-a1/index.mdx
+++ b/src/content/ideas/2025/dl-a1/index.mdx
@@ -5,7 +5,7 @@ date: '2025-01-27'
 updated: '2025-10-20'
 status: 'in-progress'
 type: 'project'
-tags: ['deep-learning', 'python', 'numpy', 'mnist', 'cs7643', 'MSCS']
+tags: ['deep-learning', 'python', 'MSCS']
 category: ['projects']
 draft: true
 audience: 'All'
