--- a/src/content/ideas/2025/dl-a2/index.mdx
+++ b/src/content/ideas/2025/dl-a2/index.mdx
@@ -5,7 +5,7 @@ date: '2025-02-17'
 updated: '2025-10-20'
 status: 'in-progress'
 type: 'project'
-tags: ['deep-learning', 'cnn', 'pytorch', 'cifar10', 'class-imbalance', 'cs7643', 'MSCS']
+tags: ['deep-learning', 'pyTorch', 'computer-vision', 'MSCS']
 category: ['projects']
 draft: true
 audience: 'All'
