--- a/src/content/ideas/2025/dl-a4/index.mdx
+++ b/src/content/ideas/2025/dl-a4/index.mdx
@@ -5,7 +5,7 @@ date: '2025-04-10'
 updated: '2025-10-20'
 status: 'in-progress'
 type: 'project'
-tags: ['deep-learning', 'generative-models', 'vae', 'gan', 'diffusion', 'fashion-mnist', 'cs7643', 'MSCS']
+tags: ['deep-learning', 'pyTorch', 'generative-models', 'MSCS']
 category: ['projects']
 draft: true
 audience: 'All'
