--- a/src/content/ideas/2025/dl-retro/index.mdx
+++ b/src/content/ideas/2025/dl-retro/index.mdx
@@ -2,10 +2,9 @@
 title: 'Deep Learning'
 description: 'A survey of concepts covered in my graduate Deep Learning course'
 date: '2025-10-20'
-updated: '2025-10-20'
 status: 'in-progress'
 type: 'retro'
-tags: ['deep-learning', 'python', 'pytorch', 'neural-networks', 'computer-vision', 'NLP', 'computer-science', 'learning-in-public', 'MSCS']
+tags: ['deep-learning', 'python', 'pyTorch', 'neural-networks', 'computer-vision', 'NLP', 'computer-science', 'learning-in-public', 'MSCS']
 category: ['mscs']
 draft: true
 audience: 'All'
