--- a/src/content/ideas/2025/hpca-retro/index.mdx
+++ b/src/content/ideas/2025/hpca-retro/index.mdx
@@ -10,7 +10,7 @@ draft: true
 audience: 'All'
 media_subpath: "/ideas/hpca-retro/"
 image:
-  path: "./sketch5.jpeg"
+  path: "./hero-collage-2.png"
   alt: 'Sketch of computer architecture'
 hideCaption: true
 ---
