More iteration on heros & tags

--- a/src/content/ideas/2025/aos-retro/index.mdx
+++ b/src/content/ideas/2025/aos-retro/index.mdx
@@ -4,7 +4,7 @@ description: 'Comparing base vs. s1K-finetuned Qwen2.5-0.5B-Instruct with Crossc
 date: '2025-10-20'
 status: 'in-progress'
 type: 'retro'
-tags: ['GIOS', 'operating-systems', 'c', 'c++', 'multithreading', 'IPC', 'socket-programming', 'distributed-systems', 'computer-science', 'learning-in-public', 'MSCS']
+tags: ['operating-systems', 'c', 'c++', 'multithreading', 'IPC', 'socket-programming', 'distributed-systems', 'computer-science', 'learning-in-public', 'MSCS']
 category: ['mscs']
 draft: true
 audience: 'All'
