--- a/src/content/ideas/2025/dl-retro/index.mdx
+++ b/src/content/ideas/2025/dl-retro/index.mdx
@@ -10,7 +10,7 @@ draft: true
 audience: 'All'
 media_subpath: "/ideas/dl-retro/"
 image:
-  path: "./hero-green-ripples.png"
+  path: "./hero-north-cascades.png"
   alt: 'Green Ripples'
 hideCaption: true
 ---
